# open-source-autonomous-vehicle-controller

./: .gitignore  .gitmodules  404.html  HowToSetupRPI4BasWiFiHotSpot.md  LICENSE  README.md  api-examples.html  contacts.html  hardware.html  hashmap.json  index.html  introduction.html  linux.html  markdown-examples.html  points_calib.csv  points_raw.csv  project.html  software.html  test_harness.html  windows.html
Balance-bot/Simulation/: Readme.md
Balance-bot/Simulation/balancing_bot/: CMakeLists.txt  package.xml
Balance-bot/Simulation/balancing_bot/config/: joints_config.yaml
Balance-bot/Simulation/balancing_bot/scripts/: example_pd_controller.py
Balance-bot/Simulation/balancing_bot/urdf/: balancing_bot.csv
Hardware/OSAVC interface shield/: OSAVC interface shield  OSAVC interface shield-cache.lib  OSAVC interface shield.kicad_pcb  OSAVC interface shield.net  OSAVC interface shield.pro  OSAVC interface shield.sch  fp-info-cache  (+4 more)
about/: index.html  project.html  team.html
assets/: about_index.md.8bc7f75f.lean.js  about_index.md.ef268da9.js  about_team.md.380a3138.js  about_team.md.451164b6.js  about_team.md.b648827c.lean.js  about_team.md.d7478c38.js  about_team.md.f5f3f379.js  api-examples.md.b8173325.js  api-examples.md.d3fe0c86.js  app.09f6417c.js  app.180d10f3.js  app.46e0512f.js  app.56a0d991.js  app.62cd49da.js  app.8769ee9a.js  app.aec3661a.js  app.bff7ce94.js  app.cc67ec9d.js  app.d34024d9.js  app.ea91e18f.js  app.f949b2ab.js  app.fc94b4c2.js  blog_archives.md.d958a60d.js  blog_authors_Carlos.md.362ac5f5.lean.js  blog_authors_Carlos.md.56e0b006.lean.js  blog_index.md.1b3036a0.lean.js  blog_posts_2023_post1.md.2d90af54.js  blog_posts_2023_post2.md.d46dba0e.lean.js  blog_posts_post1.md.2a386068.js  blog_posts_post1.md.2a386068.lean.js  blog_posts_post1.md.8bb62e05.lean.js  blog_posts_post2.md.de3ec4ab.js  blog_posts_post2.md.de3ec4ab.lean.js  blog_tags.md.b4cdfb01.js  blog_troubleShooting.md.af1688f2.js  blog_troubleShooting.md.d3b4cebf.js  contacts.md.52920ade.js  contacts.md.c0210ac4.lean.js  contribute_code_contribute.md.6727e1d6.js  contribute_code_contribute.md.6727e1d6.lean.js  (+111 more)
blog/: archives.html  index.html  tags.html  troubleShooting.html
companion_computer/: OSAVC_web_server.py  OSAVC_web_server_2.py  OSAVC_web_server_pc.py  OSAVC_web_server_rpi.py  README.md
contribute/: index.html
documentation/: getArticles.mjs  package-lock.json  package.json
guide/: CompanionComputers.html  CreatingRC_ESC_X.html  FirstProject.html  Hardware.html  Software.html  TestHarness.html  introduction.html
path-finding/: README.md  Readme.md  install-tf-on-pi.txt
pico_module/: CMakeLists.txt  main.c
pico_module/AS5047D_encoder/: AS5047D_encoder.c  AS5047D_encoder.h  CMakeLists.txt
pico_module/MG90S_servo/: CMakeLists.txt  MG90S_servo.c  MG90S_servo.h
pico_module/V3HP_lidar/: CMakeLists.txt  V3HP_lidar.c  V3HP_lidar.h
pico_module/constant_panning_mode/: constant_panning_mode.c  constant_panning_mode.h
pico_module/mavlink/: mavlink.c  mavlink.h
pico_module/range_at_angle/: range_at_angle.c  range_at_angle.h
projects/: index.html  team.html
python/: AGV_sensor_dat.csv  AGV_sensors.py  IMU_data_060321.csv  Process_logfile.ipynb  README.md  ahrs_params.yaml  calib_all_sensors.py  config.yaml  datalog.py  dorveaux.py  dorveaux_2d.py  dorveaux_fixed_lag.py  filters.py  generate_points.py  gyro_bias_data.csv  gyro_rotation_data.csv  gyro_x_rotation_data.csv  gyro_y_rotation_data.csv  gyro_z_rotation_data.csv  haversine.py  high_res_imu.csv  imu.py  imu_tmbl_070121.csv  imu_tmbl_072621.csv  log_20210608-160036.csv  logfile.csv  mag_motor_interaction.py  mag_unwrapped.csv  mag_wrapped.csv  magcal_2D.csv  mav_test.py  mavcsv_logging.py  mavlink_msgs.py  mavtester.py  plot_gps_ltp.py  plot_mav_csv.py  plot_stats.py  points_calib__2021-06-26-19-23-29.csv  points_raw__2021-06-26-19-23-29.csv  process_logfile.py  (+7 more)
(+752 files in other folders)
