<package format="2">
  <name>balancing_bot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for balancing_bot</p>
    <p>This package contains configuration data, 3D models and launch files
for balancing_bot robot</p>
  </description>
  <author>damodardatta</author>
  <maintainer email="damodardatta@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>velocity_controllers</depend>
  <export>
    <architecture_independent />
  </export>
</package>